# omni_robot

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/omni_gazebo/share/omni_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/omni_gazebo/share/omni_gazebo/cmake/: omni_gazeboConfig.cmake
install/omni_gazebo/share/omni_gazebo/launch/: empty_world.launch.py
install/omni_gazebo/share/omni_gazebo/urdf/: omni_robot.xacro
install/omni_gazebo/share/omni_gazebo/world/: line1.world  line2.world
install/uline_patrol_msgs/include/uline_patrol_msgs/uline_patrol_msgs/action/: uline_patrol_command.h
install/uline_patrol_msgs/share/uline_patrol_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uline_patrol_msgs/share/uline_patrol_msgs/action/: UlinePatrolCommand.action
install/uline_patrol_msgs/share/uline_patrol_msgs/cmake/: export_uline_patrol_msgs__rosidl_generator_cExport.cmake  export_uline_patrol_msgs__rosidl_generator_pyExport-noconfig.cmake  export_uline_patrol_msgs__rosidl_typesupport_fastrtps_cExport.cmake  uline_patrol_msgs__rosidl_typesupport_cExport-noconfig.cmake  uline_patrol_msgs__rosidl_typesupport_cppExport.cmake  uline_patrol_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  uline_patrol_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/uline_patrol_msgs/share/uline_patrol_msgs/srv/: UlinePatrolCommand.idl  UlinePatrolCommand.srv  UlinePatrolCommand_Request.msg
install/velodyne_description/share/velodyne_description/: package.sh
install/velodyne_description/share/velodyne_description/world/: empty.world
install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/: package.sh
install/velodyne_simulator/share/velodyne_simulator/: local_setup.sh  package.sh
log/: latest_build
omni_gazebo/: CMakeLists.txt
omni_gazebo/Apriltag36_11_00015_paper/: model.config  model.sdf
omni_gazebo/launch/: empty_world.launch.py  gazebo.launch.py
omni_gazebo/urdf/: omni_robot.gazebo  omni_robot.xacro
omni_gazebo/urdf/camera/: camera.xacro
omni_gazebo/urdf/sensors/: imu.xacro
omni_gazebo/world/: line2_with_apriltag.world  simple.world
uline_patrol_msgs/: CMakeLists.txt  package.xml
velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
(+20 files in other folders)
