<package format="3">
    <name>uline_patrol_msgs</name>
    <version>0.0.0</version>
    <description>This is the cv_task_msgs package</description>
    <maintainer email="zhanjia.bi@ubtrobot.com">bzj</maintainer>
    <license>No License</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend condition="$ROSA_VERSION != 2">rosidl_default_generators</buildtool_depend>

    <depend condition="$ROSA_VERSION == 2">rosa_generate_tools</depend>
    <depend>std_msgs</depend>
    <exec_depend condition="$ROSA_VERSION != 2">rosidl_default_runtime</exec_depend>
    <member_of_group condition="$ROSA_VERSION != 2">rosidl_interface_packages</member_of_group>

</package>